--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,11 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_recipe">RecipeActivity</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="menu_item_widget_title">Add widget</string>
     <string name="title_recipe_list">recipes</string>
     <string name="title_recipe_detail">Recipe Detail</string>
+    <string name="appwidget_text">EXAMPLE</string>
+    <string name="add_widget">Add widget</string>
+    <string name="removed">Removed</string>
+    <string name="added">Added</string>
 </resources>
